# saju

./: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh
.github/workflows/: test.yml
.moai/: manifest.json  status_line.sh
.moai/config/: config.yaml
.moai/config/sections/: project.yaml  system.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/specs/SPEC-API-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-API-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-CALC-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-CALC-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-CORE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-INFRA-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-INTERP-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-002/: acceptance.md  (+2 more)
app/: config.py  main.py
app/api/: deps.py  router.py
app/services/: calendar_service.py  content_loader.py  interpretation_service.py  prompt_builder.py  saju_service.py
core/: __init__.py  calendar.py  constants.py  deun.py  exceptions.py  hapchung.py  jijanggan.py  ohang.py  pillar.py  shinsal.py  sibiunsung.py  solar_term.py  yongshin.py  yuksin.py
core/models/: __init__.py  domain.py  request.py  response.py
data/: julgi.json
tests/: __init__.py  test_api_calendar.py  test_api_health.py  test_api_interpret.py  test_api_saju.py  test_api_saju_detail.py  test_calendar.py  test_constants.py  test_deun.py  test_hapchung.py  test_hapchung_detail.py  test_hapchung_ui.py  test_integration.py  test_interpretation_service.py  test_jijanggan.py  test_models.py  test_ohang.py  test_pillar.py  test_saju_service_extended.py  test_sewun.py  test_shinsal.py  test_sibiunsung.py  test_solar_term.py  test_yongshin.py  test_yuksin.py
tests/services/: test_content_loader.py
(+9 files in other folders)
