[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "app"]

[project]
name = "saju"
version = "0.1.0"
description = "Python saju (四柱八字) calculation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "korean-lunar-calendar>=0.3.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
ui = [
    "streamlit>=1.32.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*", "plotly", "plotly.*", "requests"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["korean_lunar_calendar", "korean_lunar_calendar.*"]
ignore_missing_imports = true
